--- a/src/infrastructure/template/new-organization.hbs
+++ b/src/infrastructure/template/new-organization.hbs
@@ -76,26 +76,19 @@ a[x-apple-data-detectors] {
           <td align="center" bgcolor="#15ECDA" style="padding:0;Margin:0;background-color:#F5F5F5">
            <table class="es-header-body" cellspacing="0" cellpadding="0" bgcolor="#ffffff" align="center" style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-collapse:collapse;border-spacing:0px;background-color:#fafafa;width:600px;border-top-left-radius:15px; border-top-right-radius:15px;" role="none">
              <tr style="border-collapse:collapse">
-              <td align="left" style="padding:0;Margin:0;padding-top:25px;padding-bottom:40px">
+              <td align="left" style="padding:0;Margin:0;padding-top:25px;">
                <table cellspacing="0" cellpadding="0" width="100%" role="none" style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-collapse:collapse;border-spacing:0px">
                  <tr style="border-collapse:collapse">
                   <td class="es-m-p0r" valign="top" align="center" style="padding:0;Margin:0;width:600px">
                    <table width="100%" cellspacing="0" cellpadding="0" role="presentation" style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-collapse:collapse;border-spacing:0px">
                      <tr style="border-collapse:collapse">
-                      <td align="center" class="es-m-txt-c" style="padding:0;Margin:0;padding-top:20px;font-size:0px"><a target="_blank" href="{{ link }}" style="-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;text-decoration:underline;color:#EF0D33;font-size:14px">
+                      <td align="center" class="es-m-txt-c" style="padding:0;Margin:0;padding-top:20px;padding-bottom:20px;font-size:0px"><a target="_blank" href="{{ link }}" style="-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;text-decoration:underline;color:#EF0D33;font-size:14px">
                         <img src="http://localhost:3001/assets/logo-sofia-horizontal.svg" 
                         alt="" style="display:block;border:0;text-decoration:none;-ms-interpolation-mode:bicubic" width="150"></a></td>
                      </tr>
                      <tr style="border-collapse:collapse">
-                      <td align="center" class="es-m-txt-c" style="padding:0;Margin:0;padding-top:30px"><h1 style="Margin:0;line-height:33.6px;mso-line-height-rule:exactly;font-family:'Open Sans', sans-serif;font-size:28px;font-style:normal;font-weight:bold;color:#262626">Bienvenido</h1></td>
+                      <td align="center" class="es-m-txt-c" style="padding:0;Margin:0;"><p style="Margin:0;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-family:'Open Sans', sans-serif;line-height:25px;color:#262626;font-size:15px">¡Te han agregado a una nueva organización!</p></td>
                      </tr>
-                     <tr style="border-collapse:collapse">
-                      <td align="center" class="es-m-txt-c" style="padding:0;Margin:0;padding-bottom:40px"><p style="Margin:0;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-family:'Open Sans', sans-serif;line-height:25px;color:#262626;font-size:15px">Estamos muy contentos de tenerte como parte de Sofia.</p></td>
-                     </tr>
-                     <tr style="border-collapse:collapse">
-                      <td align="center" class="es-m-txt-c" style="padding:0;Margin:0;padding-top:20px;font-size:0px"><a target="_blank" href="{{ link }}" style="-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;text-decoration:underline;color:#EF0D33;font-size:14px"><img src="http://localhost:3001/assets/sofia-welcome.svg" alt="" style="display:block;border:0;text-decoration:none;-ms-interpolation-mode:bicubic" width="250"></a></td>
-                     </tr>
-                     
                    </table></td>
                  </tr>
                </table></td>
@@ -114,14 +107,7 @@ a[x-apple-data-detectors] {
                   <td align="center" valign="top" style="padding:0;Margin:0;width:580px">
                    <table cellpadding="0" cellspacing="0" width="100%" role="presentation" style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-collapse:collapse;border-spacing:0px">
                      <tr style="border-collapse:collapse">
-                      <td align="center" style="padding-bottom:15px;Margin:0"><p style="Margin:0;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-family:'Open Sans', sans-serif;line-height:21px;color:#262626;font-size:14px">Hola {{ email }},</p><p style="Margin:2;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-family:'Open Sans', sans-serif;line-height:21px;color:#262626;font-size:14px">Es un placer darte la bienvenida a Sofia Chat.</p><p style="Margin:0;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-family:'Open Sans', sans-serif;line-height:21px;color:#262626;font-size:14px">Nuestra plataforma está diseñada para revolucionar la manera en que interactúas con tus clientes, automatizando mensajes en múltiples canales como Web, WhatsApp, Messenger, y más. Con el poder de la Inteligencia Artificial, podrás:</p>
-                      </td>
-                     </tr>
-                     <tr style="border-collapse:collapse">
-                      <td align="center" style="padding:0;Margin:0;;font-family:'Open Sans', sans-serif;font-size:14px;color:#262626;line-height:21px;">
-                        ✅ Responder automáticamente a preguntas frecuentes.<br>
-                        ✅ Gestionar conversaciones en tiempo real.<br>
-                        ✅ Ahorrar tiempo y mejorar la experiencia de tus clientes.<br>
+                      <td align="center" style="padding-bottom:15px;Margin:0"><p style="Margin:0;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-family:'Open Sans', sans-serif;line-height:21px;color:#262626;font-size:14px">Hola {{ email }},</p><p style="Margin:2;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-family:'Open Sans', sans-serif;line-height:21px;color:#262626;font-size:14px">Es un placer darte la bienvenida a Sofia Chat.</p><p style="Margin:0;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-family:'Open Sans', sans-serif;line-height:21px;color:#262626;font-size:14px">Has sido agregado a la organización {{ organization_name }} en Sofia Chat. Ahora puedes acceder y gestionar las conversaciones con clientes de manera más eficiente.</p>
                       </td>
                      </tr>
                      <tr style="border-collapse:collapse">
@@ -137,7 +123,7 @@ a[x-apple-data-detectors] {
                     <![endif]--><!--[if !mso]><!-- --><span class="msohide es-button-border" style="border-style:solid;border-color:#1B2A2F;background:#15ecda;border-width:0px;display:inline-block;border-radius:7px;width:auto;mso-hide:all"><a href="{{ link }}" class="es-button" target="_blank" style="mso-style-priority:100 !important;text-decoration:none;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;color:#262626;font-size:16px;display:inline-block;background:#15ecda;border-radius:9px;font-family:'Open Sans', sans-serif;font-weight:bold;font-style:normal;line-height:19.2px;width:auto;text-align:center;padding:10px 25px 10px 25px;mso-padding-alt:0;mso-border-alt:10px solid #15ecda">Iniciar sesión</a></span><!--<![endif]--></td>
                      </tr>
                      <tr style="border-collapse:collapse">
-                      <td align="center" style="padding:0;Margin:0;padding-bottom:40px"><p style="Margin:0;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-family:'Open Sans', sans-serif;line-height:21px;color:#262626;font-size:14px">Si tienes alguna duda, nuestro equipo está aquí para ayudarte. Responde este correo o visita nuestra sección de soporte en https://sofiachat.com</p><p style="Margin:0;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-family:'Open Sans', sans-serif;line-height:21px;color:#262626;font-size:14px"><br></p><p style="Margin:0;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-family:'Open Sans', sans-serif;line-height:21px;color:#262626;font-size:14px">Gracias por confiar en Sofia Chat. Estamos emocionados de ser parte del éxito de tu negocio.</p><p style="Margin:0;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-family:'Open Sans', sans-serif;line-height:21px;color:#262626;font-size:14px"><br></p><p style="Margin:0;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-family:'Open Sans', sans-serif;line-height:21px;color:#262626;font-size:14px">Saludos,</p><p style="Margin:0;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-family:'Open Sans', sans-serif;line-height:21px;color:#262626;font-size:14px">El equipo de Sofia Chat</p></td>
+                      <td align="center" style="padding:0;Margin:0;padding-bottom:40px"><p style="Margin:0;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-family:'Open Sans', sans-serif;line-height:21px;color:#262626;font-size:14px">Si necesitas ayuda o tienes preguntas, nuestro equipo está listo para asistirte. Responde a este correo o visita nuestra sección de soporte en https://sofiachat.com.</p><p style="Margin:0;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-family:'Open Sans', sans-serif;line-height:21px;color:#262626;font-size:14px"><br></p><p style="Margin:0;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-family:'Open Sans', sans-serif;line-height:21px;color:#262626;font-size:14px">¡Bienvenido a <b>{{ organization_name }}</b> en Sofia Chat! Estamos felices de tenerte a bordo.</p><p style="Margin:0;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-family:'Open Sans', sans-serif;line-height:21px;color:#262626;font-size:14px"><br></p><p style="Margin:0;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-family:'Open Sans', sans-serif;line-height:21px;color:#262626;font-size:14px">Saludos,</p><p style="Margin:0;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-family:'Open Sans', sans-serif;line-height:21px;color:#262626;font-size:14px">El equipo de Sofia Chat</p></td>
                      </tr>
                      <tr style="border-collapse:collapse">
                       <td align="center" class="es-m-txt-c" style="padding:0;Margin:0;font-size:0px"><a target="_blank" href="{{ link }}" style="-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;text-decoration:underline;color:#EF0D33;font-size:14px"><img src="http://localhost:3001/assets/logo-sofia.svg" alt="" style="display:block;border:0;outline:none;text-decoration:none;-ms-interpolation-mode:bicubic" width="50"></a></td>
@@ -161,7 +147,6 @@ a[x-apple-data-detectors] {
                         </a>
                       </td>
                     </tr>
-                    
                    </table></td>
                  </tr>
                </table></td>
