--- a/src/infrastructure/template/user-welcome.hbs
+++ b/src/infrastructure/template/user-welcome.hbs
@@ -87,7 +87,7 @@ a[x-apple-data-detectors] {
                                     <td align="center" class="es-m-txt-c" style="padding:0;Margin:0;padding-top:30px"><h1 style="Margin:0;line-height:33.6px;mso-line-height-rule:exactly;font-family:'Open Sans', sans-serif;font-size:28px;font-style:normal;font-weight:bold;color:#262626">Bienvenido</h1></td>
                                   </tr>
                                   <tr style="border-collapse:collapse">
-                                    <td align="center" class="es-m-txt-c" style="padding:0;Margin:0;padding-bottom:40px"><p style="Margin:0;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-family:'Open Sans', sans-serif;line-height:25px;color:#262626;font-size:15px">Estamos muy contentos de tenerte como parte de Sofia.</p></td>
+                                    <td align="center" class="es-m-txt-c" style="padding:0;Margin:0;padding-top:15px;"><p style="Margin:0;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-family:'Open Sans', sans-serif;line-height:25px;color:#262626;font-size:15px">Estamos muy contentos de tenerte como parte de Sofia.</p></td>
                                   </tr>
                                   <tr style="border-collapse:collapse">
                                     <td align="center" class="es-m-txt-c" style="padding:0;Margin:0;padding-top:20px;font-size:0px"><a target="_blank" href="{{ link }}" style="-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;text-decoration:underline;color:#EF0D33;font-size:14px"><img src="{{baseUrl}}/assets/sofia-welcome.svg" alt="Welcome to Sofia Chat" style="display:block;border:0;text-decoration:none;-ms-interpolation-mode:bicubic" width="250"></a></td>
@@ -98,7 +98,7 @@ a[x-apple-data-detectors] {
                         </table></td>
                       </tr>
                       <tr style="border-collapse:collapse">
-                        <td align="left" style="Margin:0;padding-left:10px;padding-right:10px;padding-top:40px;padding-bottom:40px">
+                        <td align="left" style="Margin:0;padding-left:10px;padding-right:10px;padding-bottom:40px">
                           <table cellpadding="0" cellspacing="0" width="100%" role="none" style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-collapse:collapse;border-spacing:0px">
                             <tr style="border-collapse:collapse">
                               <td align="center" valign="top" style="padding:0;Margin:0;width:580px">
@@ -108,10 +108,16 @@ a[x-apple-data-detectors] {
                                   </td>
                                 </tr>
                                 <tr style="border-collapse:collapse">
-                                  <td align="center" style="padding:0;Margin:0;;font-family:'Open Sans', sans-serif;font-size:14px;color:#262626;line-height:21px;">
-                                    ✅ Responder automáticamente a preguntas frecuentes.<br>
-                                    ✅ Gestionar conversaciones en tiempo real.<br>
-                                    ✅ Ahorrar tiempo y mejorar la experiencia de tus clientes.<br>
+                                  <td align="center" style="padding:0;Margin:0;">
+                                    <table align="center" style="margin:0 auto;width:auto;">
+                                      <tr>
+                                        <td style="text-align:left;font-family:'Open Sans', sans-serif;font-size:14px;color:#262626;line-height:21px;">
+                                          ✅ Responder automáticamente a preguntas frecuentes.<br>
+                                          ✅ Gestionar conversaciones en tiempo real.<br>
+                                          ✅ Ahorrar tiempo y mejorar la experiencia de tus clientes.<br>
+                                        </td>
+                                      </tr>
+                                    </table>
                                   </td>
                                 </tr>
                                 <tr style="border-collapse:collapse">
