--- a/src/infrastructure/template/new-organization.hbs
+++ b/src/infrastructure/template/new-organization.hbs
@@ -11,7 +11,7 @@
     a {text-decoration: none;}
     </style>
     <![endif]--><!--[if gte mso 9]><style>sup { font-size: 100% !important; }</style><![endif]--><!--[if !mso]><!-- -->
-  <link href="https://fonts.googleapis.com/css?family=Oswald:300,700&display=swap" rel="stylesheet"><!--<![endif]--><!--[if gte mso 9]>
+  <link href="https://fonts.googleapis.com/css?family=Satoshi:400,400i,700,700i" rel="stylesheet"><!--<![endif]--><!--[if gte mso 9]>
 <noscript>
          <xml>
            <o:OfficeDocumentSettings>
@@ -62,19 +62,19 @@ a[x-apple-data-detectors] {
 @media screen and (max-width:384px) {.mail-message-content { width:414px!important } }
 </style>
  </head>
- <body style="width:100%;font-family:'Open Sans', sans-serif;-webkit-text-size-adjust:100%;-ms-text-size-adjust:100%;padding:0;Margin:0">
-  <div dir="ltr" class="es-wrapper-color" lang="es" style="background-color:#F5F5F5"><!--[if gte mso 9]>
+ <body style="width:100%;font-family:'Satoshi', sans-serif;-webkit-text-size-adjust:100%;-ms-text-size-adjust:100%;padding:0;Margin:0">
+  <div dir="ltr" class="es-wrapper-color" width="100%" cellspacing="0" cellpadding="0" role="none" style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-collapse:collapse;border-spacing:0px;padding-top:20px;padding-bottom:20px;width:100%;height:100%;background-color:#F2F9FF"><!--[if gte mso 9]>
 			<v:background xmlns:v="urn:schemas-microsoft-com:vml" fill="t">
-				<v:fill type="tile" color="#f5f5f5"></v:fill>
+				<v:fill type="tile" color="#f2f9ff"></v:fill>
 			</v:background>
 		<![endif]-->
-   <table class="es-wrapper" width="100%" cellspacing="0" cellpadding="0" role="none" style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-collapse:collapse;border-spacing:0px;padding:0;Margin:0;width:100%;height:100%;background-repeat:repeat;background-position:center top;background-color:#F5F5F5">
+   <table class="es-wrapper" width="100%" cellspacing="0" cellpadding="0" role="none" style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-collapse:collapse;border-spacing:0px;padding:40px;Margin:0;width:100%;height:100%;background-repeat:repeat;background-position:center top;background-color:#F2F9FF">
      <tr style="border-collapse:collapse">
       <td valign="top" style="padding:0;Margin:0">
-       <table cellpadding="0" cellspacing="0" class="es-header" align="center" role="none" style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-collapse:collapse;border-spacing:0px;table-layout:fixed !important;width:100%;background-color:#1B2A2F;background-repeat:repeat;background-position:center top">
+       <table cellpadding="0" cellspacing="0" class="es-content" align="center" role="none" style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-collapse:collapse;border-spacing:0px;table-layout:fixed !important;width:100%">
          <tr style="border-collapse:collapse">
-          <td align="center" bgcolor="#15ECDA" style="padding:0;Margin:0;background-color:#F5F5F5">
-           <table class="es-header-body" cellspacing="0" cellpadding="0" bgcolor="#ffffff" align="center" style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-collapse:collapse;border-spacing:0px;background-color:#fafafa;width:600px;border-top-left-radius:15px; border-top-right-radius:15px;" role="none">
+          <td align="center" style="padding:0;Margin:0">
+           <table bgcolor="#ffffff" class="es-content-body" align="center" cellpadding="0" cellspacing="0" style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-collapse:separate;border-spacing:0px;background-color:#ffffff;width:600px;border:2px solid #DBEAF2;border-radius:16px;background:#FFF;" role="none">
              <tr style="border-collapse:collapse">
               <td align="left" style="padding:0;Margin:0;padding-top:25px;">
                <table cellspacing="0" cellpadding="0" width="100%" role="none" style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-collapse:collapse;border-spacing:0px">
@@ -87,7 +87,7 @@ a[x-apple-data-detectors] {
                         alt="" style="display:block;border:0;text-decoration:none;-ms-interpolation-mode:bicubic" width="150"></a></td>
                      </tr>
                      <tr style="border-collapse:collapse">
-                      <td align="center" class="es-m-txt-c" style="padding:0;Margin:0;"><p style="Margin:0;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-family:'Open Sans', sans-serif;line-height:25px;color:#262626;font-size:15px">¡Te han agregado a una nueva organización!</p></td>
+                      <td align="center" class="es-m-txt-c" style="padding:0;Margin:0;"><p style="Margin:0;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-family:'Satoshi', sans-serif;line-height:25px;color:#262626;font-size:15px">¡Te han agregado a una nueva organización!</p></td>
                      </tr>
                    </table></td>
                  </tr>
@@ -107,11 +107,11 @@ a[x-apple-data-detectors] {
                   <td align="center" valign="top" style="padding:0;Margin:0;width:580px">
                    <table cellpadding="0" cellspacing="0" width="100%" role="presentation" style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-collapse:collapse;border-spacing:0px">
                      <tr style="border-collapse:collapse">
-                      <td align="center" style="padding-bottom:15px;Margin:0"><p style="Margin:0;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-family:'Open Sans', sans-serif;line-height:21px;color:#262626;font-size:14px">Hola {{ email }},</p><p style="Margin:2;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-family:'Open Sans', sans-serif;line-height:21px;color:#262626;font-size:14px">Es un placer darte la bienvenida a Sofia Chat.</p><p style="Margin:0;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-family:'Open Sans', sans-serif;line-height:21px;color:#262626;font-size:14px">Has sido agregado a la organización {{ organization_name }} en Sofia Chat. Ahora puedes acceder y gestionar las conversaciones con clientes de manera más eficiente.</p>
+                      <td align="center" style="padding-bottom:15px;Margin:0"><p style="Margin:0;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-family:'Satoshi', sans-serif;line-height:21px;color:#262626;font-size:14px">Hola {{ email }},</p><p style="Margin:2;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-family:'Satoshi', sans-serif;line-height:21px;color:#262626;font-size:14px">Es un placer darte la bienvenida a Sofia Chat.</p><p style="Margin:0;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-family:'Satoshi', sans-serif;line-height:21px;color:#262626;font-size:14px">Has sido agregado a la organización {{ organization_name }} en Sofia Chat. Ahora puedes acceder y gestionar las conversaciones con clientes de manera más eficiente.</p>
                       </td>
                      </tr>
                      <tr style="border-collapse:collapse">
-                      <td align="center" style="padding:0;Margin:0;"><p style="Margin:2;margin-bottom:0;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-family:'Open Sans', sans-serif;color:#262626;font-size:14px">Tus credenciales de acceso:</p><p style="Margin:0;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-family:'Open Sans', sans-serif;color:#262626;font-size:20px;margin-left:40px"><a target="_blank" style="-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;text-decoration:none;color:#000000;font-size:14px" href="">Email: <b>{{ email }}</b><br>Contraseña: <b>{{ password }}</b></a><br></p></td>
+                      <td align="center" style="padding:0;Margin:0;"><p style="Margin:2;margin-bottom:0;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-family:'Satoshi', sans-serif;color:#262626;font-size:14px">Tus credenciales de acceso:</p><p style="Margin:0;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-family:'Satoshi', sans-serif;color:#262626;font-size:20px;margin-left:40px"><a target="_blank" style="-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;text-decoration:none;color:#000000;font-size:14px" href="">Email: <b>{{ email }}</b><br>Contraseña: <b>{{ password }}</b></a><br></p></td>
                      </tr>
                      <tr style="border-collapse:collapse">
                       <td align="center" class="es-m-txt-c" style="padding:0;Margin:0;padding-top:20px;padding-bottom:40px"><!--[if mso]><a href="{{ link }}" target="_blank" hidden>
@@ -123,13 +123,13 @@ a[x-apple-data-detectors] {
                     <![endif]--><!--[if !mso]><!-- --><span class="msohide es-button-border" style="border-style:solid;border-color:#1B2A2F;background:#15ecda;border-width:0px;display:inline-block;border-radius:7px;width:auto;mso-hide:all"><a href="{{ link }}" class="es-button" target="_blank" style="mso-style-priority:100 !important;text-decoration:none;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;color:#262626;font-size:16px;display:inline-block;background:#15ecda;border-radius:9px;font-family:'Open Sans', sans-serif;font-weight:bold;font-style:normal;line-height:19.2px;width:auto;text-align:center;padding:10px 25px 10px 25px;mso-padding-alt:0;mso-border-alt:10px solid #15ecda">Iniciar sesión</a></span><!--<![endif]--></td>
                      </tr>
                      <tr style="border-collapse:collapse">
-                      <td align="center" style="padding:0;Margin:0;padding-bottom:40px"><p style="Margin:0;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-family:'Open Sans', sans-serif;line-height:21px;color:#262626;font-size:14px">Si necesitas ayuda o tienes preguntas, nuestro equipo está listo para asistirte. Responde a este correo o visita nuestra sección de soporte en https://sofiachat.com.</p><p style="Margin:0;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-family:'Open Sans', sans-serif;line-height:21px;color:#262626;font-size:14px"><br></p><p style="Margin:0;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-family:'Open Sans', sans-serif;line-height:21px;color:#262626;font-size:14px">¡Bienvenido a <b>{{ organization_name }}</b> en Sofia Chat! Estamos felices de tenerte a bordo.</p><p style="Margin:0;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-family:'Open Sans', sans-serif;line-height:21px;color:#262626;font-size:14px"><br></p><p style="Margin:0;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-family:'Open Sans', sans-serif;line-height:21px;color:#262626;font-size:14px">Saludos,</p><p style="Margin:0;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-family:'Open Sans', sans-serif;line-height:21px;color:#262626;font-size:14px">El equipo de Sofia Chat</p></td>
+                      <td align="center" style="padding:0;Margin:0;padding-bottom:40px"><p style="Margin:0;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-family:'Satoshi', sans-serif;line-height:21px;color:#262626;font-size:14px">Si necesitas ayuda o tienes preguntas, nuestro equipo está listo para asistirte. Responde a este correo o visita nuestra sección de soporte en https://sofiachat.com.</p><p style="Margin:0;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-family:'Satoshi', sans-serif;line-height:21px;color:#262626;font-size:14px"><br></p><p style="Margin:0;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-family:'Satoshi', sans-serif;line-height:21px;color:#262626;font-size:14px">¡Bienvenido a <b>{{ organization_name }}</b> en Sofia Chat! Estamos felices de tenerte a bordo.</p><p style="Margin:0;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-family:'Satoshi', sans-serif;line-height:21px;color:#262626;font-size:14px"><br></p><p style="Margin:0;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-family:'Satoshi', sans-serif;line-height:21px;color:#262626;font-size:14px">Saludos,</p><p style="Margin:0;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-family:'Satoshi', sans-serif;line-height:21px;color:#262626;font-size:14px">El equipo de Sofia Chat</p></td>
                      </tr>
                      <tr style="border-collapse:collapse">
                       <td align="center" class="es-m-txt-c" style="padding:0;Margin:0;font-size:0px"><a target="_blank" href="{{ link }}" style="-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;text-decoration:underline;color:#EF0D33;font-size:14px"><img src="{{baseUrl}}/assets/logo-sofia.svg" alt="" style="display:block;border:0;outline:none;text-decoration:none;-ms-interpolation-mode:bicubic" width="50"></a></td>
                      </tr>
                      <tr style="border-collapse:collapse">
-                      <td align="center" style="padding:0;Margin:0;padding-top:20px"><p style="Margin:0;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-family:'Open Sans', sans-serif;line-height:21px;color:#262626;font-size:14px">SOF.IA LLM © 2025 Derechos Reservados</p></td>
+                      <td align="center" style="padding:0;Margin:0;padding-top:20px"><p style="Margin:0;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-family:'Satoshi', sans-serif;line-height:21px;color:#262626;font-size:14px">SOF.IA LLM 2025 Derechos Reservados</p></td>
                      </tr>
                      <tr style="border-collapse:collapse">
                       <td align="center" class="es-m-txt-c" style="padding:20px;Margin:0;font-size:0px">
