--- a/src/infrastructure/template/reset-password.hbs
+++ b/src/infrastructure/template/reset-password.hbs
@@ -83,7 +83,7 @@ a[x-apple-data-detectors] {
                    <table width="100%" cellspacing="0" cellpadding="0" role="presentation" style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-collapse:collapse;border-spacing:0px">
                      <tr style="border-collapse:collapse">
                       <td align="center" class="es-m-txt-c" style="padding:0;Margin:0;padding-top:20px;font-size:0px"><a target="_blank" href="{{ link }}" style="-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;text-decoration:underline;color:#EF0D33;font-size:14px">
-                        <img src="{{baseUrl}}/assets/logo-sofia-horizontal.svg" 
+                        <img src="{{frontendBaseUrl}}/assets/logo-sofia-horizontal.svg" 
                         alt="" style="display:block;border:0;text-decoration:none;-ms-interpolation-mode:bicubic" width="150"></a></td>
                      </tr>
                      <tr style="border-collapse:collapse">
