fix: update email templates to use backend assets instead of frontend URLs

--- a/src/infrastructure/template/user-welcome.hbs
+++ b/src/infrastructure/template/user-welcome.hbs
@@ -81,7 +81,7 @@ a[x-apple-data-detectors] {
                                 <table cellpadding="0" cellspacing="0" width="100%" role="presentation" style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-collapse:collapse;border-spacing:0px">
                                   <tr style="border-collapse:collapse">
                                     <td align="center" class="es-m-txt-c" style="padding:0;Margin:0;padding-top:20px;font-size:0px"><a target="_blank" href="{{ link }}" style="-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;text-decoration:underline;color:#EF0D33;font-size:14px">
-                                      <img src="{{frontendBaseUrl}}/img/logo-sofia-horizontal.svg" alt="Sofia Chat Logo" style="display:block;border:0;text-decoration:none;-ms-interpolation-mode:bicubic" width="150" referrerPolicy="no-referrer"></a></td>
+                                      <img src="{{backendBaseUrl}}/assets/logo-sofia-horizontal.svg" alt="Sofia Chat Logo" style="display:block;border:0;text-decoration:none;-ms-interpolation-mode:bicubic" width="150" referrerPolicy="no-referrer"></a></td>
                                   </tr>
                                   <tr style="border-collapse:collapse">
                                     <td align="center" class="es-m-txt-c" style="padding:0;Margin:0;padding-top:30px"><h1 style="Margin:0;line-height:33.6px;mso-line-height-rule:exactly;font-family:'Satoshi', sans-serif;font-size:28px;font-style:normal;font-weight:bold;color:#262626">Bienvenido</h1></td>
@@ -90,7 +90,7 @@ a[x-apple-data-detectors] {
                                     <td align="center" class="es-m-txt-c" style="padding:0;Margin:0;padding-top:15px;"><p style="Margin:0;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-family:'Satoshi', sans-serif;line-height:25px;color:#262626;font-size:15px">Estamos muy contentos de tenerte como parte de Sofia.</p></td>
                                   </tr>
                                   <tr style="border-collapse:collapse">
-                                    <td align="center" class="es-m-txt-c" style="padding:0;Margin:0;padding-top:20px;font-size:0px"><a target="_blank" href="{{ link }}" style="-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;text-decoration:underline;color:#EF0D33;font-size:14px"><img src="{{frontendBaseUrl}}/img/sofia-welcome.svg" alt="Welcome to Sofia Chat" style="display:block;border:0;text-decoration:none;-ms-interpolation-mode:bicubic" width="250" referrerPolicy="no-referrer"></a></td>
+                                    <td align="center" class="es-m-txt-c" style="padding:0;Margin:0;padding-top:20px;font-size:0px"><a target="_blank" href="{{ link }}" style="-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;text-decoration:underline;color:#EF0D33;font-size:14px"><img src="{{backendBaseUrl}}/assets/sofia-welcome.svg" alt="Welcome to Sofia Chat" style="display:block;border:0;text-decoration:none;-ms-interpolation-mode:bicubic" width="250" referrerPolicy="no-referrer"></a></td>
                                   </tr>
                                   
                             </table></td>
@@ -136,7 +136,7 @@ a[x-apple-data-detectors] {
                                   <td align="center" style="padding:0;Margin:0;padding-bottom:40px"><p style="Margin:0;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-family:'Satoshi', sans-serif;line-height:21px;color:#262626;font-size:14px">Si tienes alguna duda, nuestro equipo está aquí para ayudarte. Responde este correo o visita nuestra sección de soporte en https://sofiachat.com</p><p style="Margin:0;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-family:'Satoshi', sans-serif;line-height:21px;color:#262626;font-size:14px"><br></p><p style="Margin:0;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-family:'Satoshi', sans-serif;line-height:21px;color:#262626;font-size:14px">Gracias por confiar en Sofia Chat. Estamos emocionados de ser parte del éxito de tu negocio.</p><p style="Margin:0;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-family:'Satoshi', sans-serif;line-height:21px;color:#262626;font-size:14px"><br></p><p style="Margin:0;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-family:'Satoshi', sans-serif;line-height:21px;color:#262626;font-size:14px">Saludos,</p><p style="Margin:0;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-family:'Satoshi', sans-serif;line-height:21px;color:#262626;font-size:14px">El equipo de Sofia Chat</p></td>
                                 </tr>
                                 <tr style="border-collapse:collapse">
-                                  <td align="center" class="es-m-txt-c" style="padding:0;Margin:0;font-size:0px"><a target="_blank" href="{{ link }}" style="-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;text-decoration:underline;color:#EF0D33;font-size:14px"><img src="{{frontendBaseUrl}}/img/logo-sofia.svg" alt="Sofia Chat" style="display:block;border:0;outline:none;text-decoration:none;-ms-interpolation-mode:bicubic" width="50" referrerPolicy="no-referrer"></a></td>
+                                  <td align="center" class="es-m-txt-c" style="padding:0;Margin:0;font-size:0px"><a target="_blank" href="{{ link }}" style="-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;text-decoration:underline;color:#EF0D33;font-size:14px"><img src="{{backendBaseUrl}}/assets/logo-sofia.svg" alt="Sofia Chat" style="display:block;border:0;outline:none;text-decoration:none;-ms-interpolation-mode:bicubic" width="50" referrerPolicy="no-referrer"></a></td>
                                 </tr>
                                 <tr style="border-collapse:collapse">
                                   <td align="center" style="padding:0;Margin:0;padding-top:20px"><p style="Margin:0;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-family:'Satoshi', sans-serif;line-height:21px;color:#262626;font-size:14px">SOF.IA LLM 2025 Derechos Reservados</p></td>
@@ -144,16 +144,16 @@ a[x-apple-data-detectors] {
                                 <tr style="border-collapse:collapse">
                                   <td align="center" class="es-m-txt-c" style="padding:20px;Margin:0;font-size:0px">
                                     <a target="_blank" href="{{ link1 }}" style="-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;text-decoration:none;">
-                                      <img src="{{frontendBaseUrl}}/img/logo-linkedin.svg" alt="LinkedIn" width="20" style="display:inline-block;border:0;outline:none;text-decoration:none;margin:0 20px;" referrerPolicy="no-referrer">
+                                      <img src="{{backendBaseUrl}}/assets/logo-linkedin.svg" alt="LinkedIn" width="20" style="display:inline-block;border:0;outline:none;text-decoration:none;margin:0 20px;" referrerPolicy="no-referrer">
                                     </a>
                                     <a target="_blank" href="{{ link2 }}" style="-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;text-decoration:none;">
-                                      <img src="{{frontendBaseUrl}}/img/logo-whatsapp.svg" alt="WhatsApp" width="20" style="display:inline-block;border:0;outline:none;text-decoration:none;margin:0 20px;" referrerPolicy="no-referrer">
+                                      <img src="{{backendBaseUrl}}/assets/logo-whatsapp.svg" alt="WhatsApp" width="20" style="display:inline-block;border:0;outline:none;text-decoration:none;margin:0 20px;" referrerPolicy="no-referrer">
                                     </a>
                                     <a target="_blank" href="{{ link3 }}" style="-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;text-decoration:none;">
-                                      <img src="{{frontendBaseUrl}}/img/logo-instagram.svg" alt="Instagram" width="20" style="display:inline-block;border:0;outline:none;text-decoration:none;margin:0 20px;" referrerPolicy="no-referrer">
+                                      <img src="{{backendBaseUrl}}/assets/logo-instagram.svg" alt="Instagram" width="20" style="display:inline-block;border:0;outline:none;text-decoration:none;margin:0 20px;" referrerPolicy="no-referrer">
                                     </a>
                                     <a target="_blank" href="{{ link4 }}" style="-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;text-decoration:none;">
-                                      <img src="{{frontendBaseUrl}}/img/logo-facebook.svg" alt="Facebook" width="20" style="display:inline-block;border:0;outline:none;text-decoration:none;margin:0 20px;" referrerPolicy="no-referrer">
+                                      <img src="{{backendBaseUrl}}/assets/logo-facebook.svg" alt="Facebook" width="20" style="display:inline-block;border:0;outline:none;text-decoration:none;margin:0 20px;" referrerPolicy="no-referrer">
                                     </a>
                                   </td>
                                 </tr>
