--- a/src/infrastructure/template/user-welcome.hbs
+++ b/src/infrastructure/template/user-welcome.hbs
@@ -143,17 +143,17 @@ a[x-apple-data-detectors] {
                                 </tr>
                                 <tr style="border-collapse:collapse">
                                   <td align="center" class="es-m-txt-c" style="padding:20px;Margin:0;font-size:0px">
-                                    <a target="_blank" href="{{ link1 }}" style="-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;text-decoration:none;">
+                                    <a target="_blank" href="{{linkedinLink}}" style="-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;text-decoration:none;">
                                       <img src="{{backendBaseUrl}}/assets/logo-linkedin.svg" alt="LinkedIn" width="20" style="display:inline-block;border:0;outline:none;text-decoration:none;margin:0 20px;" referrerPolicy="no-referrer">
                                     </a>
-                                    <a target="_blank" href="{{ link2 }}" style="-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;text-decoration:none;">
-                                      <img src="{{backendBaseUrl}}/assets/logo-whatsapp.svg" alt="WhatsApp" width="20" style="display:inline-block;border:0;outline:none;text-decoration:none;margin:0 20px;" referrerPolicy="no-referrer">
-                                    </a>
-                                    <a target="_blank" href="{{ link3 }}" style="-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;text-decoration:none;">
+                                    <a target="_blank" href="{{instagramLink}}" style="-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;text-decoration:none;">
                                       <img src="{{backendBaseUrl}}/assets/logo-instagram.svg" alt="Instagram" width="20" style="display:inline-block;border:0;outline:none;text-decoration:none;margin:0 20px;" referrerPolicy="no-referrer">
                                     </a>
-                                    <a target="_blank" href="{{ link4 }}" style="-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;text-decoration:none;">
+                                    <a target="_blank" href="{{facebookLink}}" style="-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;text-decoration:none;">
                                       <img src="{{backendBaseUrl}}/assets/logo-facebook.svg" alt="Facebook" width="20" style="display:inline-block;border:0;outline:none;text-decoration:none;margin:0 20px;" referrerPolicy="no-referrer">
+                                    </a>
+                                    <a target="_blank" href="{{xLink}}" style="-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;text-decoration:none;">
+                                      <img src="{{backendBaseUrl}}/assets/logo-x.svg" alt="X" width="20" style="display:inline-block;border:0;outline:none;text-decoration:none;margin:0 20px;" referrerPolicy="no-referrer">
                                     </a>
                                   </td>
                                 </tr>
